--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ h1 {
     font-weight: normal;
 }
 
+.fa-plus {
+    float: right;
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -16,6 +20,9 @@ ul {
 
 body {
     font-family: 'Roboto', sans-serif;
+    background: #C6FFDD;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 li {
@@ -23,10 +30,28 @@ li {
     height: 40px;
     line-height: 40px;
     color: #666;
+    overflow: hidden;
 }
 
 li:nth-child(2n) {
     background-color: #f7f7f7;
+}
+
+span {
+    background: #e74c3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    width: 0;
+    display: inline-block;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover span {
+    width: 40px;
+    opacity: 1;
 }
 
 input {
@@ -38,6 +63,7 @@ input {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     color: #2980b9;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 
 input:focus {
