updated icon for showing/hiding input to switch between two icons on click

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,14 @@ input:focus {
     float: right;
 }
 
+.fa-minus {
+    float: right;
+}
+
+.hidden {
+    display: none;
+}
+
 .completed {
     color: gray;
     text-decoration: line-through;
