--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,8 @@ input {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     color: #2980b9;
-    border: 3px solid rgba(0, 0, 0, 0);
+    border: 3px solid rgba(0, 0, 0, .2);
+    outline: none;
 }
 
 input:focus {
