--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ h1 {
     text-transform: uppercase;
     font-size: 24px;
     font-weight: normal;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 ul {
@@ -33,6 +36,8 @@ li {
     height: 40px;
     line-height: 40px;
     color: #666;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     overflow: hidden;
 }
 
@@ -74,14 +79,6 @@ input:focus {
     background: #fff;
     border: 3px solid #2980b9;
     outline: none;
-}
-
-.fa-plus {
-    float: right;
-}
-
-.fa-minus {
-    float: right;
 }
 
 .hidden {
